fix: 增加collapse的--open

--- a/src/components/_collapse.scss
+++ b/src/components/_collapse.scss
@@ -8,7 +8,7 @@
             border-top: 1px solid $gray-300;
         }
 
-        &[open] {
+        &[open], &--open {
             >header {
                 border-bottom: 1px solid $gray-300;
                 >i.icon-arrow{
